vagrant/elk/install_helm/files/es-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-master-external
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: es-logs.fks.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
