vagrant/elk/install_helm/files/kb-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-kibana-external
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kb-logs.fks.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
